@@ -1,3 +1,9 @@
+2014-07-07  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-start.el (gnus-dribble-read-file): Don't stop the auto-saving of
+	the dribble buffer even when it is shrunk a lot.
+	<http://thread.gmane.org/gmane.emacs.gnus.user/16923>
+
 2014-06-26  Glenn Morris  <rgm@gnu.org>
 
 	* mm-util.el (help-function-arglist): Remove outdated declaration.
